main and content page created with mock data

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.18.1"
   },
   "devDependencies": {
